# mif

./: .gitignore  CMakeLists.txt
include/mif/: compress.h  constants.h  fft.h  hash.h  macros.h  matrix.h  noise.h  types.h  utils.h  vector.h
include/mif/linear/: vector.h
include/mif/linear/vector2/: all.h  buffer.h  macros.h  operations.h  vector2.h
include/mif/linear/vector3/: all.h  buffer.h  macros.h  operations.h  vector3.h
include/mif/linear/vector4/: all.h  buffer.h  macros.h  operations.h  vector4.h
include/mif/type/: blob.h  buffer.h  int64.h  uint32.h
scripts/: generate_vectors.py
src/: compress.c  fft.c  main.c  matrix.c  noise.c  utils.c
src/linear/: vector.c
src/linear/vector2/: buffer.c  operations.c
src/linear/vector3/: buffer.c  operations.c
src/linear/vector4/: buffer.c  operations.c
src/type/: int64.c  uint32.c
